--- a/Shared/StoryboardExample/Base.lproj/StoryboardExample.storyboard
+++ b/Shared/StoryboardExample/Base.lproj/StoryboardExample.storyboard
@@ -18,12 +18,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XgV-K8-Ym6">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="1100"/>
+                                <rect key="frame" x="0.0" y="48" width="414" height="1052"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ow2-UK-XGl" userLabel="ContentView">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="1021"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Storyteller Row View Round" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rO3-Uv-Fgj" userLabel="Storyteller Label Row View Round">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Storyteller Stories Row View Round" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rO3-Uv-Fgj" userLabel="Storyteller Label Row View Round">
                                                 <rect key="frame" x="8" y="10" width="398" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="SXj-mQ-MRJ"/>
@@ -39,7 +39,7 @@
                                                     <constraint firstAttribute="height" constant="110" id="Ylh-Fb-TvY"/>
                                                 </constraints>
                                             </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Storyteller Row View Square" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pCA-hM-SYY" userLabel="Storyteller Label Row View Square">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Storyteller Stories Row View Square" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pCA-hM-SYY" userLabel="Storyteller Label Row View Square">
                                                 <rect key="frame" x="8" y="174" width="398" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="C1a-b4-DHf"/>
@@ -54,8 +54,11 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="210" id="vnM-NF-Har"/>
                                                 </constraints>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="yes" value="YES"/>
+                                                </userDefinedRuntimeAttributes>
                                             </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Storyteller Grid View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1SH-6c-30j" userLabel="Storyteller Label Grid View">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Storyteller Stories Grid View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1SH-6c-30j" userLabel="Storyteller Label Grid View">
                                                 <rect key="frame" x="8" y="438" width="398" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="jCW-aN-wYx"/>
@@ -73,7 +76,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="waF-2h-gUI">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="waF-2h-gUI" customClass="StorytellerClipsRowView" customModule="StorytellerSDK">
                                                 <rect key="frame" x="0.0" y="617" width="414" height="210"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
@@ -89,7 +92,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <view contentMode="scaleToFill" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="100" translatesAutoresizingMaskIntoConstraints="NO" id="JzL-XS-Rvy">
+                                            <view contentMode="scaleToFill" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="100" translatesAutoresizingMaskIntoConstraints="NO" id="JzL-XS-Rvy" customClass="StorytellerClipsGridView" customModule="StorytellerSDK">
                                                 <rect key="frame" x="0.0" y="881" width="414" height="100"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </view>
@@ -148,20 +151,20 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="XgV-K8-Ym6" secondAttribute="bottom" id="K2V-3b-29Z"/>
-                            <constraint firstItem="XgV-K8-Ym6" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="cyT-gt-kzr"/>
-                            <constraint firstItem="XgV-K8-Ym6" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ntW-8a-mR8"/>
-                            <constraint firstItem="XgV-K8-Ym6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="raG-Ch-nmN"/>
+                            <constraint firstItem="XgV-K8-Ym6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="77l-C6-KCg"/>
+                            <constraint firstItem="XgV-K8-Ym6" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="DOG-Mo-qoz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XgV-K8-Ym6" secondAttribute="trailing" id="WR7-ag-KDF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="XgV-K8-Ym6" secondAttribute="top" id="hHB-k9-yiA"/>
                         </constraints>
                     </view>
                     <size key="freeformSize" width="414" height="1100"/>
                     <connections>
                         <outlet property="scrollView" destination="XgV-K8-Ym6" id="tH7-LS-bpz"/>
-                        <outlet property="storytellerClipsGridViewContainer" destination="JzL-XS-Rvy" id="yD8-DP-bQv"/>
-                        <outlet property="storytellerClipsRowViewContainer" destination="waF-2h-gUI" id="Dgk-yv-srs"/>
-                        <outlet property="storytellerGridView" destination="cvx-sN-CN2" id="NME-1f-Pnu"/>
-                        <outlet property="storytellerRowView" destination="t9E-wV-Dxi" id="O76-8I-87W"/>
-                        <outlet property="storytellerRowViewRound" destination="cts-FD-hbO" id="IMK-el-lm4"/>
+                        <outlet property="storytellerClipsGridView" destination="JzL-XS-Rvy" id="yD8-DP-bQv"/>
+                        <outlet property="storytellerClipsRowView" destination="waF-2h-gUI" id="Dgk-yv-srs"/>
+                        <outlet property="storytellerStoriesGridView" destination="cvx-sN-CN2" id="NME-1f-Pnu"/>
+                        <outlet property="storytellerStoriesRowViewRound" destination="cts-FD-hbO" id="IMK-el-lm4"/>
+                        <outlet property="storytellerStoriesRowViewSquare" destination="t9E-wV-Dxi" id="O76-8I-87W"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
